--- a/css/style.css
+++ b/css/style.css
@@ -79,3 +79,10 @@ header[role=banner] h2 {
 
 article h2 { font-size: 2.2em;}
 article h2 a:hover {text-decoration: none}
+
+@media (max-width: 767px) {
+    body {
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+}
