--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,12 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "PT Serif", "Georgia", "Helvetica Neue", Arial, sans-serif
 }
 
-article p {
+article {
     font-family: 'PT Serif', "Georgia", "Times", 'Times New Roman', serif;
     line-height: 1.7em;
     font-size: 1.2em;
+}
+article p {
     margin-bottom: 1.5em;
 }
 
